--- a/Hunger/index.html
+++ b/Hunger/index.html
@@ -1,4 +1,15 @@
-<header class="header">
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+	<link rel="stylesheet" href="css/style.min.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+	<title>Document</title>
+</head>
+
+<body>
+	<header class="header">
 	<div class="container header__flex">
 		<nav class="navbar">
 			<ul class="navbar_menu navbar_menu__left">
@@ -90,3 +101,7 @@
 		</div>
 	</div>
 </header>
+	<script src="js/common.min.js"></script>
+</body>
+
+</html>
