--- a/Hunger/index.html
+++ b/Hunger/index.html
@@ -101,6 +101,31 @@
 		</div>
 	</div>
 </header>
+	<div class="block__about block block__light">
+	<div class="container block__flex">
+		<div class="block_left block-part">
+			<div class="block_text_wrapper">
+				<div class="block_heading">
+					ABOUT US
+				</div>
+				<div class="block_text about_text">
+					<div class="block_text__bold">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at velit maximus, molestie est a, tempor magna.
+					</div>
+					<div class="block_text__primary">
+						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem, odio explicabo praesentium molestias repellendus illum cupiditate recusandae fuga quas suscipit autem. Vel exercitationem ullam corporis est rerum, debitis magnam modi laudantium maxime eveniet veritatis doloremque sequi aspernatur, tenetur, dicta odit incidunt facere aliquam? Dolorem itaque, tempora quasi velit alias nostrum.
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="block_right block-part">
+			<div class="block_image_wrapper ">
+				<img class="block_image" src="img/about-img.png" alt="">
+			</div>
+		</div>
+	</div>
+</div>
+	
 	<script src="js/common.min.js"></script>
 </body>
 
