Third block, light/dark styles

--- a/#src/index.html
+++ b/#src/index.html
@@ -11,7 +11,7 @@
 <body>
 	@@include('_header.html')
 	@@include('_block2.html')
-	
+	@@include('_block3.html')
 	<script src="js/common.min.js"></script>
 </body>
 
