Block 4 and form style

--- a/#src/index.html
+++ b/#src/index.html
@@ -12,6 +12,7 @@
 	@@include('_header.html')
 	@@include('_block2.html')
 	@@include('_block3.html')
+	@@include('_block4.html')
 	<script src="js/common.min.js"></script>
 </body>
 
