--- a/Hunger/index.html
+++ b/Hunger/index.html
@@ -135,7 +135,6 @@
 			</span>
 		</div>
 		<div class="block_left block-part">
-			
 			<div class="block_image_wrapper block_image_wrapper__left">
 				<img class="block_image" src="img/about-img.png" alt="">
 			</div>
@@ -153,6 +152,52 @@
 						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem, odio explicabo praesentium molestias repellendus illum cupiditate recusandae fuga quas suscipit autem. Vel exercitationem ullam corporis est rerum, debitis magnam modi laudantium maxime eveniet veritatis doloremque sequi aspernatur, tenetur, dicta odit incidunt facere aliquam? Dolorem itaque, tempora quasi velit alias nostrum.
 					</div>
 				</div>
+			</div>
+		</div>
+	</div>
+</div>
+	<div class="block__about block block__light">
+	<div class="container block__flex">
+		<div class="block_bottom">
+			<span class="block_footer">
+				Mon - Fri: <b>8PM - 10PM</b>, Sat - Sun: <b>8PM - 3AM</b>, Phone: <b>+40 729 131 637/+40 726 458 782</b>
+			</span>
+		</div>
+		<div class="block_left block-part">
+			<div class="block_heading">
+				BOOK A TABLE
+			</div>
+			<div class="book-form_wrapper">
+				<form action="index.html" class="book_form">
+					<div class="book_form_item_wrapper">
+						<input class="book_form_item inpt-primary" type="text" placeholder="Name" required>
+					</div>
+					<div class="book_form_item_wrapper">
+						<input class="book_form_item inpt-primary" type="email" placeholder="Email" required>
+					</div>
+					<div class="book_form_item_wrapper">
+						<input class="book_form_item inpt-primary" type="tel" placeholder="Phone" required>
+					</div>
+					<div class="book_form_item_wrapper">
+						<input class="book_form_item inpt-primary" type="text" placeholder="People" required>
+					</div>
+					<div class="book_form_item_wrapper">
+						<input class="book_form_item inpt-primary" type="text" placeholder="Date(mm/dd)" required>
+					</div>
+					<div class="book_form_item_wrapper">
+						<input class="book_form_item inpt-primary" type="text" placeholder="Time" required>
+					</div>
+					<div class="book_form_item_wrapper">
+						<button class="book_form_button btn btn-primary" type="submit">
+							BOOK NOW
+						</button>
+					</div>
+				</form>
+			</div>
+		</div>
+		<div class="block_right block-part">
+			<div class="block_image_wrapper block_image_wrapper__right">
+				<img class="block_image" src="img/book-a-table.png" alt="">
 			</div>
 		</div>
 	</div>
