--- a/#src/index.html
+++ b/#src/index.html
@@ -13,6 +13,8 @@
 	@@include('_block2.html')
 	@@include('_block3.html')
 	@@include('_block4.html')
+	@@include('_block5.html')
+	<script src="js/jquery.min.js"></script>
 	<script src="js/common.min.js"></script>
 </body>
 
