new jsLibs gulp task, jquery + slick imported

--- a/#src/_block4.html
+++ b/#src/_block4.html
@@ -1,4 +1,4 @@
-<div class="block__about block block__light">
+<div class="block__book block block__light">
 	<div class="container block__flex">
 		<div class="block_bottom">
 			<span class="block_footer">
