--- a/#src/_block5.html
+++ b/#src/_block5.html
@@ -1,4 +1,4 @@
-<div class="block__team block block__dark">
+<div class="block__spec block block__dark">
 	<div class="block_lines">
 	</div>
 	<div class="container block__flex">
@@ -27,5 +27,10 @@
 				</div>
 			</div>
 		</div>
+	</div>
+	<div class="block__spec_slider">
+		<div class="spec_item">fd</div>
+		<div class="spec_item">dsd</div>
+		<div class="spec_item">sd</div>
 	</div>
 </div>
