--- a/Hunger/index.html
+++ b/Hunger/index.html
@@ -156,7 +156,7 @@
 		</div>
 	</div>
 </div>
-	<div class="block__about block block__light">
+	<div class="block__book block block__light">
 	<div class="container block__flex">
 		<div class="block_bottom">
 			<span class="block_footer">
@@ -202,7 +202,7 @@
 		</div>
 	</div>
 </div>
-	<div class="block__team block block__dark">
+	<div class="block__spec block block__dark">
 	<div class="block_lines">
 	</div>
 	<div class="container block__flex">
@@ -232,8 +232,13 @@
 			</div>
 		</div>
 	</div>
+	<div class="block__spec_slider">
+		<div class="spec_item">fd</div>
+		<div class="spec_item">dsd</div>
+		<div class="spec_item">sd</div>
+	</div>
 </div>
-	<script src="js/jquery.min.js"></script>
+	<script src="js/libs.min.js"></script>
 	<script src="js/common.min.js"></script>
 </body>
 
