--- a/#src/index.html
+++ b/#src/index.html
@@ -14,7 +14,7 @@
 	@@include('_block3.html')
 	@@include('_block4.html')
 	@@include('_block5.html')
-	<script src="js/jquery.min.js"></script>
+	<script src="js/libs.min.js"></script>
 	<script src="js/common.min.js"></script>
 </body>
 
