Refactor block images

--- a/#src/_block2.html
+++ b/#src/_block2.html
@@ -15,7 +15,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="block_right block-part">
+		<div class="block_right block-part block-part_img">
 			<div class="block_image_wrapper block_image_wrapper__right">
 				<img class="block_image" src="img/about-img.png" alt="">
 			</div>
