--- a/#src/_block3.html
+++ b/#src/_block3.html
@@ -7,7 +7,7 @@
 				OUR TEAM
 			</span>
 		</div>
-		<div class="block_left block-part">
+		<div class="block_left block-part block-part_img">
 			<div class="block_image_wrapper block_image_wrapper__left">
 				<img class="block_image" src="img/about-img.png" alt="">
 			</div>
