--- a/#src/_block4.html
+++ b/#src/_block4.html
@@ -37,7 +37,7 @@
 				</form>
 			</div>
 		</div>
-		<div class="block_right block-part">
+		<div class="block_right block-part block-part_img">
 			<div class="block_image_wrapper block_image_wrapper__right">
 				<img class="block_image" src="img/book-a-table.png" alt="">
 			</div>
