--- a/#src/_block5.html
+++ b/#src/_block5.html
@@ -7,7 +7,81 @@
 				SPECIALTIES
 			</span>
 		</div>
-		<div class="block_left block-part">
+		<div class="block__spec_slider">
+			<div class="spec_item">
+				<div class="block__flex ovf-off">
+					<div class="block_left block-part block-part_img">
+						<div class="block_image_wrapper block_image_wrapper__left">
+							<img class="block_image" src="img/strawberry-dessert.png" alt="">
+						</div>
+					</div>
+					<div class="block_right block-part">
+						<div class="block_text_wrapper">
+							<div class="block_heading text__white">
+								CHOCOLATE PANCAKES
+							</div>
+							<div class="block_text about_text text__white">
+								<div class="block_text__bold text__white">
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at velit maximus, molestie est a, tempor magna.
+								</div>
+								<div class="block_text__primary text__white">
+									Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem, odio explicabo praesentium molestias repellendus illum cupiditate recusandae fuga quas suscipit autem. Vel exercitationem ullam corporis est rerum, debitis magnam modi laudantium maxime eveniet veritatis doloremque sequi aspernatur, tenetur, dicta odit incidunt facere aliquam? Dolorem itaque, tempora quasi velit alias nostrum.
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="spec_item">
+				<div class="block__flex ovf-off">
+					<div class="block_left block-part">
+						<div class="block_image_wrapper block_image_wrapper__left">
+							<img class="block_image" src="img/strawberry-dessert.png" alt="">
+						</div>
+					</div>
+					<div class="block_right block-part">
+						<div class="block_text_wrapper">
+							<div class="block_heading text__white">
+								CHOCOLATE PANCAKES
+							</div>
+							<div class="block_text about_text text__white">
+								<div class="block_text__bold text__white">
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at velit maximus, molestie est a, tempor magna.
+								</div>
+								<div class="block_text__primary text__white">
+									Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem, odio explicabo praesentium molestias repellendus illum cupiditate recusandae fuga quas suscipit autem. Vel exercitationem ullam corporis est rerum, debitis magnam modi laudantium maxime eveniet veritatis doloremque sequi aspernatur, tenetur, dicta odit incidunt facere aliquam? Dolorem itaque, tempora quasi velit alias nostrum.
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="spec_item">
+				<div class="block__flex ovf-off">
+					<div class="block_left block-part">
+						<div class="block_image_wrapper block_image_wrapper__left">
+							<img class="block_image" src="img/strawberry-dessert.png" alt="">
+						</div>
+					</div>
+					<div class="block_right block-part">
+						<div class="block_text_wrapper">
+							<div class="block_heading text__white">
+								CHOCOLATE PANCAKES
+							</div>
+							<div class="block_text about_text text__white">
+								<div class="block_text__bold text__white">
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at velit maximus, molestie est a, tempor magna.
+								</div>
+								<div class="block_text__primary text__white">
+									Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem, odio explicabo praesentium molestias repellendus illum cupiditate recusandae fuga quas suscipit autem. Vel exercitationem ullam corporis est rerum, debitis magnam modi laudantium maxime eveniet veritatis doloremque sequi aspernatur, tenetur, dicta odit incidunt facere aliquam? Dolorem itaque, tempora quasi velit alias nostrum.
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- <div class="block_left block-part">
 			<div class="block_image_wrapper block_image_wrapper__left">
 				<img class="block_image" src="img/strawberry-dessert.png" alt="">
 			</div>
@@ -26,11 +100,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 	</div>
-	<div class="block__spec_slider">
-		<div class="spec_item">fd</div>
-		<div class="spec_item">dsd</div>
-		<div class="spec_item">sd</div>
-	</div>
+	
 </div>
